<resources>
    <string name="app_name">Yamp</string>
    <string name="do_i_wanna_know">Do I Wanna Know?</string>
    <string name="three_doors_down">3 Doors Down</string>
    <string name="pause_music">Pause</string>
    <string name="stop_music">Stop</string>
    <string name="next_song">Next Song</string>
    <string name="search_song">Search on device</string>
    <string name="start_playlist">Start playlist</string>
    <string name="previous_song_on_playlist">Previous song in playlist</string>
    <string name="next_song_on_playlist">Next song in playlist</string>
    <string name="add_to_playlist">Add song to playlist</string>
</resources>
