<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AlertDialog.AppCompat">


    <!-- 3 doors down -->
    <Button
        android:id="@+id/three_doors_down_button"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:text="@string/three_doors_down"
        android:onClick="play3DoorsDown" />

    <!--Do I Wanna Know-->
    <Button
        android:id="@+id/do_i_wanna_know_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_i_wanna_know"
        android:onClick="playDoIWannaKnow" />

    <!-- Next song -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_song"
        android:onClick="playNextSong"/>

    <!-- Pause button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause_music"
        android:onClick="pauseMusic"/>

    <!-- Stop button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_music"
        android:onClick="stopMusic"/>

    <!-- Search song button (WIP) -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_song"
        android:onClick="searchSong"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_playlist"
        android:onClick="startPlaylist"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_playlist"
        android:onClick="addToPlaylist"/>
</LinearLayout>